--- a/CSS/style.css
+++ b/CSS/style.css
@@ -3927,3 +3927,35 @@ body {
     display: none !important;
   }
 }
+
+
+
+.checkout .container{
+    display: flex;
+    gap: 30px;
+    align-items: flex-start;
+}
+
+/* قسم بيانات التوصيل */
+.checkout .container .inputs,
+.checkout .container .form_inputs,
+.checkout .container .delivery_form{
+    flex: 2;
+}
+
+/* ملخص الطلب */
+.checkout .container .ordersummary{
+    flex: 1;
+    background: #fff;
+    border-radius: 10px;
+    padding: 20px;
+    box-shadow: 0 0 10px rgba(0,0,0,0.05);
+}
+
+
+
+@media (max-width: 768px){
+    .checkout .container{
+        flex-direction: column;
+    }
+}
