--- a/CSS/style.css
+++ b/CSS/style.css
@@ -3959,3 +3959,33 @@ body {
         flex-direction: column;
     }
 }
+
+
+
+
+
+
+
+
+
+.cart-icon-mobile {
+    position: relative;
+}
+
+.cart-badge-mobile {
+    position: absolute;
+    top: -4px;
+    right: -8px;
+    min-width: 16px;
+    height: 16px;
+    background: #1e88e5; /* أزرق احترافي */
+    color: #fff;
+    font-size: 10px;
+    font-weight: 600;
+    line-height: 16px;
+    text-align: center;
+    border-radius: 50%;
+    box-shadow: 0 0 0 2px #fff; /* فاصل أبيض خفيف */
+}
+
+
